--- a/public_html/layout.css
+++ b/public_html/layout.css
@@ -19,3 +19,10 @@ table, th, td {
    text-align: center; 
    vertical-align: middle;
 }
+
+body{
+	width:100%;
+	margin:auto;
+	min-width:320px;max-width:2000px;
+	overflow: hidden;
+}
